tests/integration/snapshots/integration__conformance__i_number_real_neg_overflow.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
[-123123e100000]
stderr ---
