tests/integration/snapshots/integration__conformance__i_number_real_underflow.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[123e-10000000]
stdout ---
[123e-10000000]

stderr ---
