tests/integration/snapshots/integration__conformance__i_number_too_big_neg_int.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[-123123123123123123123123123123]
stdout ---
[-123123123123123123123123123123]

stderr ---
