tests/integration/snapshots/integration__conformance__i_number_too_big_pos_int.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[100000000000000000000]
stdout ---
[100000000000000000000]

stderr ---
