tests/integration/snapshots/integration__conformance__i_number_too_big_pos_int.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdout ---
[100000000000000000000]
stderr ---
