tests/integration/snapshots/integration__conformance__i_number_very_big_negative_int.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[-237462374673276894279832749832423479823246327846]
stdout ---
[-237462374673276894279832749832423479823246327846]

stderr ---
